fixed spacing

--- a/app/static/css/website.css
+++ b/app/static/css/website.css
@@ -80,7 +80,7 @@ a{
 	font-style:oblique;
 }
 
-.i-am-centered { margin: auto; max-width: 1000px;}
+.i-am-centered { margin: auto; max-width: 1200px;}
 /*IDs */
 
 #title{
